<resources>
    <string name="app_name">covid19-patient-manager</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="name">Name</string>
    <string name="type">Gender</string>
    <string name="dateTime">Admitted Date</string>
    <string name="addAppointButton">Add Patient</string>
    <string name="btnCancel">Cancel</string>
    <string name="empty_list_text">No records found</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign in using google</string>
    <string name="entName">Patient Name</string>
    <string name="btn_sign_out">Logout</string>
    <string name="enter_name">Patient Name</string>
    <string name="enter_address">Patient Gender</string>
    <string name="add_record">Add Record</string>

</resources>
