<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CECBBA"
    tools:context="com.example.covid19_patient_manager.Controller.DashboardActivity">

    <EditText
        android:id="@+id/patientNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/entName"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/genderSelectSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="436dp"
        android:entries="@array/Gender"
        android:gravity="center_vertical|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskName" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical|center_horizontal|center"
        android:onClick="onClickCancel"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/btnCancel"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddTask"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical|center_horizontal|center"
        android:onClick="addButtonPressed"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/addAppointButton"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="418dp"
        android:layout_height="53dp"
        android:layout_marginBottom="64dp"
        android:background="@color/fui_bgTwitter"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/patientNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="271dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="Fill Patient Details"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTaskName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

</androidx.constraintlayout.widget.ConstraintLayout>
