<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyEmployeeActivity">

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:minLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext"></EditText>


    <Button
        android:id="@+id/btn_update"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/convergence"
        android:onClick="updateButtonPressed"
        android:text="Update "
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_edittext" />

    <Button
        android:id="@+id/btn_update2"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:background="@drawable/rounded_corner"
        android:onClick="updateButtonPressed"
        android:text="@string/btnCancel"
        android:textColor="#673AB7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="11dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/convergence"
        android:onClick="deleteButtonPressed"
        android:text="Delete"
        android:textColor="#F80505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_edittext"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="170dp"
        tools:layout_conversion_absoluteX="180dp"
        tools:layout_conversion_absoluteY="192dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="416dp"
        android:layout_height="47dp"
        android:layout_marginBottom="44dp"
        android:background="@color/fui_linkColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="325dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/convergence"
        android:text="Update Patient Details"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTaskName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

</androidx.constraintlayout.widget.ConstraintLayout>