<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:background="#CECBBA"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logout3"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner"
        android:onClick="onClickLogout"
        android:padding="5dp"
        android:shadowColor="#A8A8A8"

        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/btn_sign_out"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/logout4"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner"
        android:onClick="onClickSwitchUser"
        android:padding="5dp"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="Switch User"
        android:textColor="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/btnAddTask2"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical|center_horizontal|center"
        android:onClick="onClickAddPatient"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/addAppointButton"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="369dp"
        android:layout_height="418dp"
        android:dividerHeight="1dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"></ListView>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/empty_list_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="433dp"
        android:layout_height="53dp"
        android:layout_marginBottom="7dp"
        android:background="@color/fui_bgTwitter"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="203dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/convergence"
        android:text="List of Patient"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTaskName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

</androidx.constraintlayout.widget.ConstraintLayout>